<resources>
    <string name="app_name">IMCTool</string>
    <string name="email">Correo</string>
    <string name="password">Clave</string>
    <string name="start_session">Iniciar Sesión</string>
    <string name="check_in">Registrarme</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="sex">Sexo</string>
    <string name="password_confirm">Confirmar Clave</string>
</resources>
